style fixed alignment of select on tablet and desktop

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -66,7 +66,7 @@ body{
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
     color:white;
-    
+
     div{
         display:flex;
         flex-direction:column;
@@ -87,6 +87,9 @@ body{
             height: 60px;
             width: 60px;
             padding-right:75px;
+        }
+        div{
+            align-items:flex-start;
         }
     }
 
